a few ui fixes
- context menus can't run off the screen any longer